--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
+    <img src="/images/Food.jpg" alt="Food Image" width="600px" height="400px">
     <ul>
         <li><a href="recipies/lasagna.html">Lasagna</a></li>
         <li><a href="recipies/deepFriedOreos.html">Deep Fried Oreos</a></li>
