Changed the image of the Monekey Tails recipie.

--- a/recipies/grilledTurkeyLegs.html
+++ b/recipies/grilledTurkeyLegs.html
@@ -17,7 +17,7 @@
         <li>In a large pot, mix the lemon-lime flavored carbonated beverage, sugar, hot sauce, red pepper, pepper, and onion. Place the turkey legs in the mixture, and bring to a boil. Cook 30 to 45 minutes, until the turkey has reached an internal temperature of 180 degrees F (80 degrees C).</li>
         <li>Remove onion slices from the mixture, and arrange on the prepared grill. Place turkey legs over the onions. Drizzle with honey, and season with steak seasoning. Cook, tuning once, 20 minutes, or until a crisp browned crust has formed on the turkey legs.</li>
     </ol>
-    <a href="/index.html">Return Home</a>
+    <a href="/Recipies">Return Home</a>
 
 </body>
 </html>
