--- a/recipies/deepFriedOreos.html
+++ b/recipies/deepFriedOreos.html
@@ -16,6 +16,6 @@
         <li>Heat oil in deep-fryer to 375 degrees F (190 degrees C).</li>
         <li>Whisk together the egg, milk, and 2 teaspoons of vegetable oil in a bowl until smooth. Stir in the pancake mix until no dry lumps remain. Dip the cookies into the batter one at a time, and carefully place into the hot frying oil. Fry only 4 or 5 at a time to avoid overcrowding the deep fryer. Cook until the cookies are golden-brown, about 2 minutes. Drain on a paper towel-lined plate before serving.</li>
     </ol>
-    <a href="/index.html">Return Home</a>
+    <a href="/Recipies">Return Home</a>
 </body>
 </html>
