--- a/recipies/monkeyTails.html
+++ b/recipies/monkeyTails.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Monkey Tails</h1>
-    <img src="/images/MonkeyTails.png" alt="Monkey Tails" width="600px" height="600px">
+    <img src="/images/MonekeyTails2.jpeg" alt="Monkey Tails" width="600px" height="600px">
     <h2>Description</h2>
     <p>These chocolate-covered frozen bananas are a great summer treat. The ripe bananas have a wonderful creamy consistency when frozen, and the rich chocolate coating is delicious. You can vary the toppings to suit your taste, including drizzling with melted white or milk chocolate, or caramel. Roll in shredded coconut, chopped nuts, sprinkles, or other toppings.</p>
     <h2>Steps</h2>
@@ -17,6 +17,6 @@
         <li>Melt the chocolate and butter in a microwave-safe glass or ceramic bowl in 30-second intervals, stirring after each melting, for 1 to 3 minutes (depending on your microwave).</li>
         <li>Dip the frozen bananas in the melted chocolate, spooning the chocolate over the banana to cover it completely. Roll in coconut if desired. Place the dipped bananas on the wax paper-covered baking sheet, and freeze until the chocolate is firm.</li>
     </ol>
-    <a href="/index.html">Return Home</a>
+    <a href="/Recipies">Return Home</a>
 </body>
 </html>
