--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Recipies</title>
 </head>
 <body>
     <h1>Odin Recipies</h1>
     <img src="/images/Food.jpg" alt="Food Image" width="600px" height="400px">
-    <ul>
-        <li><a href="recipies/lasagna.html">Lasagna</a></li>
-        <li><a href="recipies/deepFriedOreos.html">Deep Fried Oreos</a></li>
-        <li><a href="recipies/monkeyTails.html">Monkey Tails</a></li>
-        <li><a href="recipies/grilledTurkeyLegs.html">Grilled Turkey Legs</a></li>
+    <div class="container">
+    <ul class="listOfRecipies">
+        <li class="listItem"><a href="recipies/lasagna.html">Lasagna</a></li>
+        <li class="listItem"><a href="recipies/deepFriedOreos.html">Deep Fried Oreos</a></li>
+        <li class="listItem"><a href="recipies/monkeyTails.html">Monkey Tails</a></li>
+        <li class="listItem"><a href="recipies/grilledTurkeyLegs.html">Grilled Turkey Legs</a></li>
         
     </ul>
-    
+    </div>
 </body>
 </html>
