--- a/recipies/deepFriedOreos.html
+++ b/recipies/deepFriedOreos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
     <title>Deep Fried Oreos</title>
 </head>
 <body>
@@ -12,10 +13,10 @@
     <h2>Description</h2>
     <p>This is a carnival favorite where I grew up. Oreos get dipped into pancake batter and fried - yummy!! You can do this with or without a deep fryer.</p>
     <h2>Steps</h2>
-    <ol>
+    <ol class="listOfRecipies Steps">
         <li>Heat oil in deep-fryer to 375 degrees F (190 degrees C).</li>
         <li>Whisk together the egg, milk, and 2 teaspoons of vegetable oil in a bowl until smooth. Stir in the pancake mix until no dry lumps remain. Dip the cookies into the batter one at a time, and carefully place into the hot frying oil. Fry only 4 or 5 at a time to avoid overcrowding the deep fryer. Cook until the cookies are golden-brown, about 2 minutes. Drain on a paper towel-lined plate before serving.</li>
     </ol>
-    <a href="/Recipies">Return Home</a>
+    <a href="/index.html">Return Home</a>
 </body>
 </html>
