--- a/recipies/grilledTurkeyLegs.html
+++ b/recipies/grilledTurkeyLegs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
     <title>Grilled Turkey Legs</title>
 </head>
 <body>
@@ -12,12 +13,12 @@
     <h2>Description</h2>
     <p>These spicy turkey legs are sweet and hot--just like the smoked turkey legs you get at the fair or theme park!</p>
     <h2>Steps</h2>
-    <ol>
+    <ol class="listOfRecipies Steps">
         <li>Preheat an outdoor grill for high heat, and lightly oil grate.</li>
         <li>In a large pot, mix the lemon-lime flavored carbonated beverage, sugar, hot sauce, red pepper, pepper, and onion. Place the turkey legs in the mixture, and bring to a boil. Cook 30 to 45 minutes, until the turkey has reached an internal temperature of 180 degrees F (80 degrees C).</li>
         <li>Remove onion slices from the mixture, and arrange on the prepared grill. Place turkey legs over the onions. Drizzle with honey, and season with steak seasoning. Cook, tuning once, 20 minutes, or until a crisp browned crust has formed on the turkey legs.</li>
     </ol>
-    <a href="/Recipies">Return Home</a>
+    <a href="/index.html">Return Home</a>
 
 </body>
 </html>
