Changed the path of styles.css

--- a/recipies/deepFriedOreos.html
+++ b/recipies/deepFriedOreos.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>Deep Fried Oreos</title>
 </head>
 <body>
     <h1>Deep Fried Oreos</h1>
-    <img src="/images/deepFriedOreos.jpg" alt="Deep Fried Oreos" width="600px" height="600px">
+    <img src="../images/deepFriedOreos.jpg" alt="Deep Fried Oreos" width="600px" height="600px">
     <h2>Description</h2>
     <p>This is a carnival favorite where I grew up. Oreos get dipped into pancake batter and fried - yummy!! You can do this with or without a deep fryer.</p>
     <h2>Steps</h2>
