--- a/recipies/monkeyTails.html
+++ b/recipies/monkeyTails.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>Monkey Tails</title>
 </head>
 <body>
     <h1>Monkey Tails</h1>
-    <img src="/images/MonekeyTails2.jpeg" alt="Monkey Tails" width="600px" height="600px">
+    <img src="../images/MonekeyTails2.jpeg" alt="Monkey Tails" width="600px" height="600px">
     <h2>Description</h2>
     <p>These chocolate-covered frozen bananas are a great summer treat. The ripe bananas have a wonderful creamy consistency when frozen, and the rich chocolate coating is delicious. You can vary the toppings to suit your taste, including drizzling with melted white or milk chocolate, or caramel. Roll in shredded coconut, chopped nuts, sprinkles, or other toppings.</p>
     <h2>Steps</h2>
