--- a/recipies/grilledTurkeyLegs.html
+++ b/recipies/grilledTurkeyLegs.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>Grilled Turkey Legs</title>
 </head>
 <body>
     <h1>Grilled Turkey Legs</h1>
-    <img src="/images/TurkeyLegs.jpg" alt="Turkey Legs" width="600px" height="600px">
+    <img src="../images/TurkeyLegs.jpg" alt="Turkey Legs" width="600px" height="600px">
     <h2>Description</h2>
     <p>These spicy turkey legs are sweet and hot--just like the smoked turkey legs you get at the fair or theme park!</p>
     <h2>Steps</h2>
