--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <img src="/images/Food.jpg" alt="Food Image" width="600px" height="400px">
+    <img src="../images/Food.jpg" alt="Food Image" width="600px" height="400px">
     <div class="container">
     <ul class="listOfRecipies">
         <li class="listItem"><a href="recipies/lasagna.html">Lasagna</a></li>
